# kdbxstudio

./: .gitignore  AGENTS.md  COPYRIGHT  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: kdbxstudio.desktop
assets/metainfo/: com.kdbxstudio.KDBXStudio.metainfo.xml
docs/: browser-integration.md  packaging-signing.md  roadmap.md  ui-specification.md
packaging/: README.md
packaging/appimage/: build_appdir.sh
packaging/flatpak/: com.kdbxstudio.KDBXStudio.yml
scripts/: generate_icons.py  smoke_visual.py  verify_features.py
src/kdbxstudio/: __init__.py  __main__.py
src/kdbxstudio/application/: __init__.py  audit_engine.py  autotype.py  browser_bridge.py  database_manager.py  emergency_sheet.py  expiry.py  export.py  favicon.py  file_watch.py  hibp.py  history_diff.py  import_csv.py  merge.py  plugin_manager.py  search_engine.py  ssh_agent.py  templates.py  (+1 more)
tasks/: lessons.md  todo.md
tests/: test_browser_protocol.py  test_cache.py  test_crypto.py  test_database.py  test_e2e_feature_matrix.py  test_entry_icons.py  test_expiry_editor.py  test_generator_and_recent.py  test_group_icons.py  test_groups_import_creds.py  test_gui_smoke.py  test_hardening_p1.py  test_history_plugins.py  test_hybrid_ui.py  test_i18n.py  test_logic_quality_fixes.py  test_marketplace_icons.py  test_new_features.py  test_notes_preview.py  test_pem_and_templates.py  test_perf_correctness_fixes.py  test_quality_fixes.py  test_recycle_and_sessions.py  test_recycle_bin_visibility.py  test_roadmap_foundations.py  test_security_dashboard.py  test_security_dashboard_charts.py  test_settings_and_search.py  test_theme_palette.py  test_totp_history_export.py  test_unlock_dialog.py  test_update_check.py  test_visual_polish.py
(+94 files in other folders)
